--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,40 +1,61 @@
 name: Docker Build
-'on':
-  workflow_dispatch: {}
-  push: {}
+on:
+  push:
+    branches: [ main ]
 jobs:
   build:
+    name: Build and Pushing the Image
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v1
       with:
         fetch-depth: '0'
+
     - name: Set up DotNET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.402
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
+
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_SAMPLES_USERNAME }}
         password: ${{ secrets.DOCKERHUB_SAMPLES_PASSWORD }}
+
     - name: Install GitVersion
       uses: gittools/actions/gitversion/setup@v0.9.14
       with:
         versionSpec: 5.x
+
     - id: determine_version
       name: Determine Version
       uses: gittools/actions/gitversion/execute@v0.9.14
       with:
         additionalArguments: /overrideconfig mode=Mainline
+
     - name: Install Octopus Deploy CLI
       uses: OctopusDeploy/install-octocli@v1.1.1
       with:
         version: latest
+
     - name: Install Dependencies
       run: dotnet restore
       shell: bash
@@ -49,12 +70,21 @@ jobs:
         path: '**/*.trx'
         reporter: dotnet-trx
         fail-on-error: 'false'
-    - name: Build and push
-      uses: docker/build-push-action@v3
-      with:
-        context: RandomQuotes
-        push: true
-        tags: octopussamples/randomquotes:${{ steps.determine_version.outputs.semVer }}
+
+    - name: Build, tag, and push image to Amazon ECR
+      id: build-image
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: octo-test
+
+      run: |
+        # Build a docker container and push it to ECR
+        git_hash=$(git rev-parse --short "$GITHUB_SHA")
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash .
+        echo "Pushing image to ECR..."
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash
+        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash"
+
     - name: Create Octopus Release
       uses: OctopusDeploy/create-release-action@v1.1.1
       with:
