--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -67,10 +67,12 @@ jobs:
       run: |
         # Build a docker container and push it to ECR
         git_hash=$(git rev-parse --short "$GITHUB_SHA")
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${{ steps.determine_version.outputs.semVer }} .
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:randomquotes .
+        docker tag $ECR_REGISTRY/$ECR_REPOSITORY:randomquotes $ECR_REGISTRY/$ECR_REPOSITORY:randomquotes:${{ steps.determine_version.outputs.semVer }}
         echo "Pushing image to ECR..."
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:${{ steps.determine_version.outputs.semVer }}
-        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:${{ steps.determine_version.outputs.semVer }}"
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:randomquotes
+        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:randomquotes"
+        
 
     - name: Create Octopus Release
       uses: OctopusDeploy/create-release-action@v1.1.1
@@ -78,5 +80,5 @@ jobs:
         api_key: ${{ secrets.OCTOPUS_API_TOKEN }}
         project: Random Quotes
         server: ${{ secrets.OCTOPUS_SERVER_URL }}
-        deploy_to: Dev
+        deploy_to: Development
         packages: Deploy container to Kubernetes:randomquotes:${{ steps.determine_version.outputs.semVer }}
