--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -67,10 +67,10 @@ jobs:
       run: |
         # Build a docker container and push it to ECR
         git_hash=$(git rev-parse --short "$GITHUB_SHA")
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:randomquotes .
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${{ steps.determine_version.outputs.semVer }} .
         echo "Pushing image to ECR..."
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:randomquotes
-        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:randomquotes"
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:${{ steps.determine_version.outputs.semVer }}
+        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:${{ steps.determine_version.outputs.semVer }}"
         
 
     - name: Create Octopus Release
